--- a/data/page/index.css
+++ b/data/page/index.css
@@ -58,7 +58,7 @@ iframe {
 }
 
 .toolbar button svg {
-	fill: #737373;
+	fill: #555;
 	pointer-events: none;
 	vertical-align: middle;
 }
@@ -73,4 +73,8 @@ iframe {
 	#support, #donation {
 		display: none;
 	}
+}
+
+html[context="webapp"] .toolbar {
+  display: none;
 }
