--- a/data/interface/index.css
+++ b/data/interface/index.css
@@ -16,7 +16,7 @@ details {
   display: flex !important;
   background-color: #f7f7f7;
   margin-right: 0 !important;
-  border: solid 1px rgba(0,0,0,0.1);
+  border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
 details[open] {
@@ -94,11 +94,11 @@ summary:focus {
   font-family: monospace;
   text-overflow: ellipsis;
   transition: 300ms ease all;
-  border: solid 1px rgba(0,0,0,0.1);
+  border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
 .section select:hover, .section button:hover {
-  background-color: rgba(0,0,0,0.05);
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .section select, .section button {
@@ -111,7 +111,8 @@ summary:focus {
 }
 
 .section svg {
-  fill: #777;
+  fill: #555;
+  margin-top: -2px;
   pointer-events: none;
   vertical-align: middle;
 }
@@ -123,7 +124,8 @@ summary:focus {
   max-height: 250px;
   overflow-y: scroll;
   margin-bottom: 5px;
-  border: solid 1px rgba(0,0,0,0.05);
+  width: calc(100vw - 125px);
+  border: solid 1px rgba(0, 0, 0, 0.05);
 }
 
 .settings table {
@@ -138,7 +140,7 @@ summary:focus {
   padding: 0;
   padding-left: 10px;
   background-color: #f7f7f7;
-  border: solid 1px rgba(0,0,0,0.05);
+  border: solid 1px rgba(0, 0, 0, 0.05);
 }
 
 .settings table tr td input {
@@ -151,7 +153,7 @@ summary:focus {
   font-family: monospace;
   vertical-align: middle;
   box-sizing: border-box;
-  border-left: solid 1px rgba(0,0,0,0.1);
+  border-left: solid 1px rgba(0, 0, 0, 0.1);
 }
 
 .settings table tr td input[disabled] {
@@ -199,7 +201,7 @@ summary:focus {
   display: inline-block;
   width: calc(50% - 3px);
   box-sizing: border-box;
-  border: solid 1px rgba(0,0,0,0.1);
+  border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
 .input {float: left}
@@ -247,7 +249,7 @@ summary:focus {
     height: 300px;
     display: block;
     margin-bottom: 5px;
-    border: solid 1px rgba(0,0,0,0.1);
+    border: solid 1px rgba(0, 0, 0, 0.1);
   }
 }
 
